Fazendo com que a arvore funcione com o nomes de paths diferentes, a.k.a. input pode ter nomes diferentes.

--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -38,7 +38,7 @@
         $(".tree_computer a").click(function()
         {
             get_tree_path = "/restore/get_client_tree/";
-            update_tree($(this).attr("path"), get_tree_path, ".tree_computer", "radio");
+            update_tree($(this).attr("path"), get_tree_path, ".tree_computer", "radio", "path_restore");
             return false;
         });
 
