Informações do sistema

--- a/nimbus/system/templates/stat.html
+++ b/nimbus/system/templates/stat.html
@@ -25,7 +25,7 @@
     <div class="block_content">
         <div class="block_chart">
             <h3>Uso de memória</h3>            
-            <div class="chart"><span class="sparklines">1,26,31,14,25,49,52,26,10</span></div>
+            <div class="progressbar"><div style="width: {{memory}}%"></div></div>
             <div class="chart_description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur gravida lorem vitae sapien hendrerit semper. Curabitur sit amet lectus elit. Curabitur massa velit, laoreet imperdiet laoreet sit amet, convallis vitae dui. Aenean consectetur posuere porttitor. Cras orci tortor, scelerisque et molestie a,
             </div>
@@ -33,7 +33,7 @@
         <div class="clear"></div>
         <div class="block_progressbar">
             <h3>Uso de CPU</h3>
-            <div class="progressbar"><div style="width: 58%"></div></div>
+            <div class="progressbar"><div style="width: {{cpu}}%"></div></div>
             <div class="chart_description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur gravida lorem vitae sapien hendrerit semper. Curabitur sit amet lectus elit. Curabitur massa velit, laoreet imperdiet laoreet sit amet, convallis vitae dui. Aenean consectetur posuere porttitor. Cras orci tortor, scelerisque et molestie a.
                 <p></p>
