Fazendo com que o bloco de estatistica soh seja mostrando quando tiver conteudo.

--- a/nimbus/base/templates/stat_block.html
+++ b/nimbus/base/templates/stat_block.html
@@ -1,4 +1,4 @@
-
+{% if item %}
 {% comment %}
 Tipos possíveis: ok, warn, error
 {% endcomment %}
@@ -15,3 +15,4 @@ Tipos possíveis: ok, warn, error
     </div>
     {% endfor %}
 </div>
+{% endif %}
