--- a/nimbus/system/templates/stat.html
+++ b/nimbus/system/templates/stat.html
@@ -2,13 +2,33 @@
 
 {% block headtags %}
 <script type="text/javascript" charset="utf-8">
+    var countDownInterval = 10;
+    var countDownTime = countDownInterval + 1;
+    
+    function countDown(){
+        countDownTime--;
+        if (countDownTime <= 0){
+            $('.tempo_restante').text(countDownTime);
+            countDownTime = countDownInterval;
+            clearTimeout(counter);
+            window.location="{{script_name}}";
+            // update_table();
+            return startit();
+        }
+        $('.tempo_restante').text(countDownTime);
+        counter=setTimeout("countDown()", 1000);
+    }
+
+    function startit(){
+        if (document.all||document.getElementById)
+            $('.tempo_restante').text(countDownTime);
+        countDown()
+    }
+
     $(document).ready(function(){
-        $('.toggle').click(function(){
-            var target = $(this).attr('ref');
-            $(this).parent().parent().find('.' + target).slideToggle();
-            return false;
-        });
+        startit()
     });
+    
 </script>
 {% endblock %}
 
@@ -20,23 +40,42 @@
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
 		<h2>{{title}}</h2>
+		<div class="right">
+            Os gráficos serão atualizados em <span class="tempo_restante">10</span> segundos.
+		</div>
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
         <div class="block_chart">
-            <h3>Uso de memória</h3>            
-            <div class="progressbar"><div style="width: {{memory}}%"></div></div>
+            <h3>Uso de memória</h3>
+            <table class="stats" rel="pie" cellpadding="0" cellspacing="0" style="width: 50% !important">
+            	<thead>
+            		<tr>
+            		    <td>&nbsp;</td>
+                        <th scope="col">Uso da memória</th>
+            		</tr>
+            	</thead>
+            	<tbody>
+            		<tr>
+            			<th scope="row">Usada</th>
+            			<td>{{memory}}</td>
+            		</tr>
+            		<tr>
+            			<th scope="row">Livre</th>
+            			<td>{{memory_free}}</td>
+            		</tr>
+            	</tbody>
+            </table>
             <div class="chart_description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur gravida lorem vitae sapien hendrerit semper. Curabitur sit amet lectus elit. Curabitur massa velit, laoreet imperdiet laoreet sit amet, convallis vitae dui. Aenean consectetur posuere porttitor. Cras orci tortor, scelerisque et molestie a,
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur gravida lorem vitae sapien hendrerit semper. Curabitur sit amet lectus elit. Curabitur massa velit, laoreet imperdiet laoreet sit amet, convallis vitae dui. Aenean consectetur posuere porttitor. Cras orci tortor, scelerisque et molestie a.</p>
             </div>
         </div>
         <div class="clear"></div>
-        <div class="block_progressbar">
+        <div class="block_chart">
             <h3>Uso de CPU</h3>
             <div class="progressbar"><div style="width: {{cpu}}%"></div></div>
             <div class="chart_description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur gravida lorem vitae sapien hendrerit semper. Curabitur sit amet lectus elit. Curabitur massa velit, laoreet imperdiet laoreet sit amet, convallis vitae dui. Aenean consectetur posuere porttitor. Cras orci tortor, scelerisque et molestie a.
-                <p></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur gravida lorem vitae sapien hendrerit semper. Curabitur sit amet lectus elit. Curabitur massa velit, laoreet imperdiet laoreet sit amet, convallis vitae dui. Aenean consectetur posuere porttitor. Cras orci tortor, scelerisque et molestie a.</p>
             </div>
         </div>
     </div>
