Ao criar um backup e tentar abrir a arvore o sistema mostrara um erro quando nao selecionar o computador.

--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -13,13 +13,13 @@
         
         $('#update_tree').click(function()
         {
-            update_tree('/', get_tree_path);
+            update_tree('/', get_tree_path, undefined, undefined, undefined, '#computer_id');
             return false;
         });
 
         $(".tree a").click(function()
         {
-            update_tree($(this).attr("path"), get_tree_path);
+            update_tree($(this).attr("path"), get_tree_path, undefined, undefined, undefined, '#computer_id');
             return false;
         });
     });
