--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -98,7 +98,7 @@ a:hover {
 #header h1 {
 	float: left;
 	/*margin-right: 60px;*/
-	margin-right: 30px;
+	/*margin-right: 30px;*/
 	margin-left: 40px;
 	font-family: "Helvetica Neue", "Trebuchet MS", Arial, sans-serif;
 	font-size: 18px;
@@ -1296,6 +1296,8 @@ a:hover {
     height: 40px;
     float: right;
     margin-top: 5px;
+    margin-right: -13px;
+    margin-left: 10px;
 }
 
 .status_header.error {
@@ -1311,4 +1313,8 @@ a:hover {
     padding-left: 40px;
     color: #666;
     line-height: 1em;
+}
+
+#header .align_right {
+    background: url(../images/nsp.gif) center left no-repeat;
 }
