--- a/nimbus/procedures/templates/profile_add.html
+++ b/nimbus/procedures/templates/profile_add.html
@@ -25,6 +25,20 @@
                     {% endfor %}
                 </select>
             </p>
+            
+            <script type="text/javascript" charset="utf-8">
+	            $(document).ready(function(){
+		            $('#schedule_id').change(function(){
+		                if ($('#schedule_id :selected').attr('id') == 'new_schedule') {
+		                    $('#schedule').slideDown();
+		                } else {
+		                    $('#schedule').slideUp();
+		                }
+		            });
+		            $('#schedule_id').change();
+	            });
+	        </script>
+            
             <p>
                 <label for="schedule_id">Agendamento:</label><br/>
                 <select class="styled" id="schedule_id" name="profile_schedule_id">
@@ -32,8 +46,191 @@
                     {% for schedule in schedules %}
                     <option value="{{schedule.id}}" {% if profile.schedule.id == schedule.id %}selected="selected"{% endif %}>{{schedule.name}}</option>
                     {% endfor %}
+                    <option id="new_schedule" value="new_schedule" {% if profile_schedule_id == "new_schedule" %}selected="selected"{% endif %}>Criar novo agendamento</option>
                 </select>
             </p>
+            
+            <!-- TODO: Prever um agendamento já definido. -->
+            <div class="block withsidebar" id="schedule" style="display: none">
+        		<div class="block_head">
+        			<div class="bheadl"></div>
+        			<div class="bheadr"></div>
+		
+        			<h2 style="font-size: 1.2em">
+        			    Criar novo agendamento
+        			</h2>
+        		</div>		<!-- .block_head ends -->
+	
+        		<div class="block_content">
+		
+			        <script type="text/javascript" charset="utf-8">
+			            $(document).ready(function(){
+    			            $('.schedule_activate').change(function(){
+    			                _checked = $(this).attr('checked');
+    			                _class = $(this).attr('id');
+    			                if (_checked) {
+        			                $('.' + _class).addClass('active');
+    			                } else {
+    			                    $('.' + _class).removeClass('active');
+    			                }
+    			            });
+    			            $('.schedule_activate').change();
+			            });
+			        </script>
+		
+		            
+		            <div style="float: right; padding: 10px 20px 10px 0; clear: both">
+		                {% if errors.schedule_name %}
+                        <ul class="errorlist" style="">
+                            <li>{{ errors.schedule_name }}</li>
+                        </ul>
+                        {% endif %}
+                        {% if errors.schedule_day %}
+                        <ul class="errorlist" style="">
+                            <li>{{ errors.schedule_day }}</li>
+                        </ul>
+                        {% endif %}
+                        {% if errors.schedule_hour %}
+                        <ul class="errorlist" style="">
+                            <li>{{ errors.schedule_hour }}</li>
+                        </ul>
+                        {% endif %}
+
+
+    			        <label>Nome do agendamento:</label> <input type="text" class="text small" name="schedule.name" value="{{schedule_name}}" />
+    			    </div>
+		
+        			<div class="sidebar">
+        				<ul class="sidemenu">
+        					<li><a href="#mensal" class="monthly active">Mensal</a></li>
+        					<li><a href="#semanal" class="weekly">Semanal</a></li>
+        					<li><a href="#diario" class="dayly">Diário</a></li>
+        					<li><a href="#minuto" class="hourly">Minuto</a></li>
+        				</ul>
+			
+                        <p>Agende a execução deste backup, é possível ativar mais de um agendamento.</p>
+        			</div>		<!-- .sidebar ends -->
+		        
+        			<div class="sidebar_content" id="mensal">
+        			    <p>
+                            <input type="checkbox" name="schedule.monthly.active" class="schedule_activate" id="monthly" value="1" {% if schedule_monthly_active %}checked="checked"{% endif %} /> <label for="monthly">Ativar</label>
+                        </p>
+                        <div class="personal_message"><p>Executa o backup em determinados dias do mês, sempre no horário especificado.</p></div>
+                        <p>
+                            <label>Dias do mês:</label><br/>
+                            {% for day in days %}
+                            <input type="checkbox" id="day_{{day}}" name="schedule.monthly.day" value="{{day}}" {% if day in schedule_monthly_day %}checked="checked"{% endif %} />
+                            <label for="day_{{day}}">{{day}}º</label>
+                            {% endfor %}
+                        </p>
+                        <p>
+                            <label for="mothly_hour">Hora:</label><br/>
+                            <input type="text" name="schedule.monthly.hour" id="mothly_hour" class="text small" style="width: 45px" value="{{schedule_monthly_hour}}" /><br/>
+                            <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
+                        </p>
+                        <p>
+                            <label for="level_id">Tipo de backup:</label>
+                            <select class="styled" id="level_id" name="schedule.monthly.level">
+                                {% for level in levels %}
+                                <option value="{{level}}" {% if schedule_monthly_level == level %}selected="selected"{% endif %}>{{level}}</option>
+                                {% endfor %}
+                            </select><br/>
+                            <small style="line-height: 1.2em">No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
+                        </p>
+        			</div>		<!-- .sidebar_content ends -->
+		        
+        			<div class="sidebar_content" id="semanal">
+        			    <p>
+                            <input type="checkbox" name="schedule.weekly.active" class="schedule_activate" id="weekly" value="1" {% if schedule_weekly_active %}checked="checked"{% endif %} /> <label for="weekly">Ativar</label>
+                        </p>
+                        <div class="personal_message"><p>Executa o backup em determinados dias da semana, sempre no horário especificado.</p></div>
+                        <p>
+                            <label>Dias da semana:</label><br/>
+                            {% for day in weekdays %}
+                            <input type="checkbox" id="day_{{day}}" name="schedule.weekly.day" value="{{day}}"  {% if day in schedule_weekly_day %}checked="checked"{% endif %} />
+                            <label for="day_{{day}}">{{day|title}}</label>
+                            {% endfor %}
+                        </p>
+                        <p>
+                            <label for="mothly_hour">Hora:</label><br/>
+                            <input type="text" name="schedule.weekly.hour" id="mothly_hour" class="text small" style="width: 45px" maxlength="5" value="{{schedule_weekly_hour}}" /><br/>
+                            <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
+                        </p>
+                        <p>
+                            <label for="level_id">Tipo de backup:</label><br/>
+                            <select class="styled" id="level_id" name="schedule.weekly.level">
+                                {% for level in levels %}
+                                <option value="{{level}}" {% if schedule_weekly_level == level %}selected="selected"{% endif %}>{{level}}</option>
+                                {% endfor %}
+                            </select>
+                            <small style="line-height: 1.2em">No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
+                        </p>
+        			</div>		<!-- .sidebar_content ends -->
+		        
+        			<div class="sidebar_content" id="diario">
+        			    <p>
+                            <input type="checkbox" name="schedule.dayly.active" class="schedule_activate" id="dayly" value="1" {% if schedule_dayly_active %}checked="checked"{% endif %} /> <label for="dayly">Ativar</label><br/>
+                        </p>
+                        <div class="personal_message"><p>Executa o backup todos os dias, sempre no horário especificado.</p></div>
+                        <p>
+                            <label for="dayly_hour">Hora:</label><br/>
+                            <input type="text" name="schedule.dayly.hour" id="dayly_hour" class="text small" style="width: 45px" maxlength="5" value="{{schedule_dayly_hour}}" /><br/>
+                            <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
+                        </p>
+                        <p>
+                            <label for="level_id">Tipo de backup:</label>
+                            <select class="styled" id="level_id" name="schedule.dayly.level">
+                                {% for level in levels %}
+                                <option value="{{level}}" {% if schedule_dayly_level == level %}selected="selected"{% endif %}>{{level}}</option>
+                                {% endfor %}
+                            </select>
+                            <small style="line-height: 1.2em">No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
+                        </p>
+        			</div>		<!-- .sidebar_content ends -->
+                
+                    <div class="sidebar_content" id="minuto">
+                        <p>
+                            <input type="checkbox" name="schedule.hourly.active" class="schedule_activate" id="hourly" value="1" {% if schedule_hourly_active %}checked="checked"{% endif %} /> <label for="hourly">Ativar</label>
+                        </p>
+                        <div class="personal_message"><p>Executa o backup todas as horas do dia, sempre no minuto especificado.</p></div>
+                        <p>
+                            <label for="hourly_hour">Minuto:</label><br/>
+                            <input type="text" name="schedule.hourly.hour" id="hourly_hour" class="text small" style="width: 20px" maxlength="2" value="{{schedule_hourly_hour}}" /><br/>
+                            <small>Exemplo: 20, 35 ou 08.</small>
+                        </p>
+                        <p>
+                            <label for="level_id">Tipo de backup:</label>
+                            <select class="styled" id="level_id" name="schedule.hourly.level">
+                                {% for level in levels %}
+                                <option value="{{level}}" {% if schedule_hourly_level == level %}selected="selected"{% endif %}>{{level}}</option>
+                                {% endfor %}
+                            </select>
+                            <small style="line-height: 1.2em">No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
+                        </p>
+                    </div>
+
+        		</div>		<!-- .block_content ends -->
+
+	
+        		<div class="bendl"></div>
+        		<div class="bendr"></div>
+	
+        	</div>		<!-- .block .schedule ends -->
+            
+            
+            <script type="text/javascript" charset="utf-8">
+	            $(document).ready(function(){
+		            $('#fileset_id').change(function(){
+		                if ($('#fileset_id :selected').attr('id') == 'new_fileset') {
+		                    $('#fileset').slideDown();
+		                } else {
+		                    $('#fileset').slideUp();
+		                }
+		            });
+		            $('#fileset_id').change();
+	            });
+	        </script>
+            
             <p>
                 <label for="fileset_id">Conjunto de arquivos para backup:</label><br/>
                 <select class="styled" id="fileset_id" name="profile_fileset_id">
@@ -41,8 +238,104 @@
                     {% for fileset in filesets %}
                     <option value="{{fileset.id}}" {% if profile.fileset.id == fileset.id %}selected="selected"{% endif %}>{{fileset.name}}</option>
                     {% endfor %}
+                    <option id="new_fileset" value="new_fileset" {% if profile_fileset_id == "new_fileset" %}selected="selected"{% endif %}>Criar novo conjunto de arquivo</option>
                 </select>
             </p>
+            
+            <script type="text/javascript" charset="utf-8">
+	            $(document).ready(function(){
+	                $('#filepath_template').clone().appendTo('.filepaths').show();
+	                
+	                function remover_path(obj) {
+	                    $(obj).parent().remove();
+	                    if ($('#filepath_template').parent().children().length == 1) {
+	                        adicionar_path();
+	                    }
+	                }
+	                
+	                function adicionar_path(obj) {
+	                    if (obj) {
+	                        $('#filepath_template').clone().insertAfter($(obj).parent()).show();
+	                    } else {
+	                        $('#filepath_template').clone().appendTo('.filepaths').show();
+	                    }
+	                    
+	                    
+	                    $('.filepaths .add').unbind('click').click(function(){
+    	                    adicionar_path(this);
+    	                });
+    	                
+    	                $('.filepaths .del').unbind('click').click(function(){
+    	                    remover_path(this);
+    	                });
+	                }
+	                
+	                $('.filepaths .add').click(function(){
+	                    adicionar_path(this);
+	                });
+	                
+	                $('.filepaths .del').click(function(){
+	                    remover_path(this);
+	                });
+	            });
+	        </script>
+            
+            <div class="block" id="fileset" style="display: none">
+        		<div class="block_head">
+        			<div class="bheadl"></div>
+        			<div class="bheadr"></div>
+        			<h2>Criar novo conjunto de arquivos</h2>
+        		</div>		<!-- .block_head ends -->
+        		<div class="block_content">
+                    <p>
+                        {% if errors.fileset_name %}
+                        <ul class="errorlist" style="">
+                            <li>{{ errors.fileset_name }}</li>
+                        </ul>
+                        {% endif %}
+
+                        <label for="fileset_name">Nome do conjunto de arquivos:</label><br/>
+                        <input type="text" name="fileset_name" id="fileset_name" class="text mid" value="{{fileset_name}}" />
+
+
+                    </p>
+
+                    <p>
+                        {% if errors.path %}
+                        <ul class="errorlist" style="">
+                            <li>{{ errors.path }}</li>
+                        </ul>
+                        {% endif %}
+                    </p>
+
+                    {% if path %}
+                    <p>Arquivos selecionados:</p>
+                    <ul class="tree" style="padding-left: 20px !important; margin-bottom: 20px">
+                        {% for p in path %}
+                        <li class="" style="padding-left: 20px"><span style="padding-left: 10px"><input type="checkbox" name="path" value="{{p}}" checked="checked" />{{p}}</span></li>
+                        {% endfor %}
+                    </ul>
+                    <p>Selecionar mais arquivos:</p>
+                    {% endif %}
+
+                    <!-- <a href="#" id="update_tree">atualizar arvore</a> -->
+                    <ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
+        		    
+        		    {% if 0 %}
+                    <p>
+                        <label for="fileset_name">Caminhos para backup:</label><br/>
+                        <ol class="filepaths">
+                            <li id="filepath_template" style="display: none"><input type="text" name="fileset_name" id="fileset_name" class="text medium" /> <span class="add"><img src="/media/icons/plus.png" /></span> <span class="del"><img src="/media/icons/minus.png" /></span></li>
+                        </ol>
+                    </p>
+                    {% endif %}
+                    <p></p>
+        		</div>		<!-- .block_content ends -->
+        		<div class="bendl"></div>
+        		<div class="bendr"></div>
+        	</div>		<!-- .block ends -->
+            
+            
             <p>
                 <input type="submit" class="submit mid" value="Adicionar" />
             </p>
