--- a/nimbus/procedures/templates/profile_add.html
+++ b/nimbus/procedures/templates/profile_add.html
@@ -125,7 +125,7 @@
                         </p>
                         <p>
                             <label for="mothly_hour">Hora:</label><br/>
-                            <input type="text" name="schedule.monthly.hour" id="mothly_hour" class="text small" style="width: 45px" value="{{schedule_monthly_hour}}" /><br/>
+                            <input type="text" name="schedule.monthly.hour" id="mothly_hour" class="text small mascara_hora" style="width: 45px" value="{{schedule_monthly_hour}}" /><br/>
                             <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
                         </p>
                         <p>
@@ -153,7 +153,7 @@
                         </p>
                         <p>
                             <label for="mothly_hour">Hora:</label><br/>
-                            <input type="text" name="schedule.weekly.hour" id="mothly_hour" class="text small" style="width: 45px" maxlength="5" value="{{schedule_weekly_hour}}" /><br/>
+                            <input type="text" name="schedule.weekly.hour" id="mothly_hour" class="text small mascara_hora" style="width: 45px" maxlength="5" value="{{schedule_weekly_hour}}" /><br/>
                             <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
                         </p>
                         <p>
@@ -174,7 +174,7 @@
                         <div class="personal_message"><p>Executa o backup todos os dias, sempre no horário especificado.</p></div>
                         <p>
                             <label for="dayly_hour">Hora:</label><br/>
-                            <input type="text" name="schedule.dayly.hour" id="dayly_hour" class="text small" style="width: 45px" maxlength="5" value="{{schedule_dayly_hour}}" /><br/>
+                            <input type="text" name="schedule.dayly.hour" id="dayly_hour" class="text small mascara_hora" style="width: 45px" maxlength="5" value="{{schedule_dayly_hour}}" /><br/>
                             <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
                         </p>
                         <p>
@@ -195,7 +195,7 @@
                         <div class="personal_message"><p>Executa o backup todas as horas do dia, sempre no minuto especificado.</p></div>
                         <p>
                             <label for="hourly_hour">Minuto:</label><br/>
-                            <input type="text" name="schedule.hourly.hour" id="hourly_hour" class="text small" style="width: 20px" maxlength="2" value="{{schedule_hourly_hour}}" /><br/>
+                            <input type="text" name="schedule.hourly.hour" id="hourly_hour" class="text small mascara_minuto" style="width: 20px" maxlength="2" value="{{schedule_hourly_hour}}" /><br/>
                             <small>Exemplo: 20, 35 ou 08.</small>
                         </p>
                         <p>
