Corrigindo mensagem de erro no conjunto de arquivos, retirando o popup e deixando a mensagem de erro no proprio formulario.

--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -452,6 +452,8 @@
                         <p>Selecionar mais arquivos:</p>
                         {% endif %}
 
+                        <div id="mensagem_erro_computador_selecionado" style="display: none"></div>
+
                         <!-- <a href="#" id="update_tree">atualizar arvore</a> -->
                         <ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
             		    
