--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -1265,7 +1265,7 @@ a:hover {
     padding: 0 5px !important;
 }
 
-#mensagem_erro_computador_selecionado {
+#mensagem_erro_fileset {
     -moz-border-radius: 5px;
     background: none repeat scroll 0 0 red;
     color: #FFFFFF;
