--- a/nimbus/procedures/templates/profile_add.html
+++ b/nimbus/procedures/templates/profile_add.html
@@ -360,7 +360,7 @@
                     <p>Selecionar mais arquivos:</p>
                     {% endif %}
 
-                    <div id="mensagem_erro_computador_selecionado" style="display: none"></div>
+                    <div id="mensagem_erro_fileset" style="display: none"></div>
 
                     <!-- <a href="#" id="update_tree">atualizar arvore</a> -->
                     <ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
