Mostrando mensagem quando nao existirem itens.

--- a/nimbus/procedures/templates/procedures_list.html
+++ b/nimbus/procedures/templates/procedures_list.html
@@ -68,6 +68,8 @@
                 </div>
                 <div class="clear"></div>
             </div>
+        {% empty %}
+            <p>Não existem procedimentos adicionados.</p>
         {% endfor %}
         </div>
         
