--- a/nimbus/computers/templates/computers_list.html
+++ b/nimbus/computers/templates/computers_list.html
@@ -96,6 +96,8 @@
                 </div>
                 <div class="clear"></div>
             </div>
+        {% empty %}
+            <p>Não existem computadores adicionados.</p>
         {% endfor %}
         </div>
     
