--- a/nimbus/procedures/templates/profile_list.html
+++ b/nimbus/procedures/templates/profile_list.html
@@ -33,6 +33,8 @@
                 </div>
                 <div class="clear"></div>
             </div>
+        {% empty %}
+            <p>Não existem perfis adicionados.</p>
         {% endfor %}
         </div>
     </div>
